--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "somraj-react-my-portfolio",
+    "homepage": "https://bootcamparankush.github.io/somraj-react-my-portfolio/",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
