--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "somraj-react-my-portfolio",
-    "homepage": "https://bootcamparankush.github.io/somraj-react-my-portfolio/",
+    "homepage": "https://bootcamparankush.github.io/somraj-react-portfolio/",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -13,7 +13,7 @@
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.4",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^2.1.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
